update pgutil var NO_JIRA

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -5,7 +5,7 @@ proget_api_url: "{{ proget_base_url }}/{{ proget_endpoint }}"
 proget_endpoint: endpoints
 # PGutil info
 pgutil_source_name: Default
-pgutil-version: "2.1.10.2"
+pgutil_version: "2.1.10.2"
 # Role requirements
 base_proget_archive_directory: "{{ platform_specific_default_base_proget_archive_directory }}"
 proget_status_directory: "{{ base_proget_archive_directory }}/status/"
