update dest NO_JIRA

--- a/vars/RedHat.yml
+++ b/vars/RedHat.yml
@@ -1,5 +1,6 @@
 platform_specific_default_base_proget_archive_directory: /opt/proget-archives
 pgutil: https://github.com/Inedo/pgutil/releases/download/v{{ pgutil_version }}/pgutil-linux-x64.zip
+pg_dest: /usr/bin
 required_packages:
   - p7zip
   - p7zip-plugins
