NO_JIRA MAcOS Proget

--- a/vars/Darwin.yml
+++ b/vars/Darwin.yml
@@ -1,6 +1,7 @@
 platform_specific_default_base_proget_archive_directory: /opt/proget-archives
+pgutil: https://github.com/Inedo/pgutil/releases/download/v{{ pgutil_version }}/pgutil-osx-arm64.zip
 required_packages:
   - p7zip
   - zstd
   - curl
-  - jfrog-cli-go
+  - sevenzip
