--- a/tasks/expand_archive_posix.yml
+++ b/tasks/expand_archive_posix.yml
@@ -11,6 +11,15 @@
   register: destination_directory_files
   when: destination_directory.stat.exists
 
+- name: "{{ archive.base_destination_directory }}: Ensure desination directory exists"
+  ansible.builtin.file:
+    path: "{{ archive.base_destination_directory }}"
+    state: directory
+    owner: "{{ ansible_user }}"
+    mode: "0755"
+  become: true
+  when: not destination_directory.stat.exists
+
 - name: "{{ archive.filename }}: Ensure destination directory is present"  # noqa: name[template]
   ansible.builtin.file:
     path: "{{ platform_specific_default_base_proget_archive_directory }}"
@@ -19,17 +28,21 @@
     mode: "0755"
   become: true
 
-# - name: Create Required directories
-#   ansible.builtin.file:
-#     path: "{{ item }}"
-#     state: directory
-#     owner: "{{ ansible_user }}"
-#     recurse: true
-#     mode: "0755"
-#   become: true
-#   loop:
-#     - "{{ archive.base_destination_directory }}/{{ archive.move_and_delete_base_directory }}"
-#     - "{{ proget_status_directory }}"
+- name: "{{ proget_downloads_directory }}: Ensure download directory is present"
+  ansible.builtin.file:
+    path: "{{ proget_downloads_directory }}"
+    state: directory
+    owner: "{{ ansible_user }}"
+    mode: "0755"
+  become: true
+
+- name: Ensure proget status archives directory is present
+  ansible.builtin.file:
+    path: "{{ proget_status_directory }}"
+    state: directory
+    owner: "{{ ansible_user }}"
+    mode: "0755"
+  become: true
 
 - name: "{{ archive.filename }}: Check sha256 file is present"  # noqa: name[template]
   ansible.builtin.stat:
@@ -44,7 +57,7 @@
 
 - name: "{{ archive.filename }}: GET on the remote file to read sha256"  # noqa: name[template]
   ansible.builtin.uri:
-    url: "{{ proget_api_url }}/{{ archive.repo_name }}/metadata/{{ archive.repo_path }}/{{ archive.filename }}"
+    url: "{{ proget_api_url }}/{{ archive.repo_name }}/metadata/{{ archive.file_path }}"
     method: GET
     timeout: 60
     headers:
@@ -63,7 +76,7 @@
   when: downloaded_file.stat.exists and remote_archive_head.json.size != downloaded_file.stat.size
 
 - name: "{{ archive.filename }}: Download file if sha256 changed or destination directory is new"  # noqa: no-changed-when name[template]
-  ansible.builtin.command: pgutil assets download --feed={{ archive.repo_name }} --path={{ archive.repo_path }}/{{ archive.filename }} --output={{ proget_downloads_directory }}/{{ archive.filename }}
+  ansible.builtin.command: pgutil assets download --feed={{ archive.repo_name }} --path={{ archive.file_path  }} --output={{ proget_downloads_directory }}/{{ archive.filename }}
   environment:
     PATH: "/opt/homebrew/bin:{{ ansible_env.PATH }}"
   when: >
@@ -120,6 +133,9 @@
   ansible.builtin.file:
     path: "{{ archive.base_destination_directory }}/{{ archive.move_and_delete_base_directory }}"
     state: absent
+  when: >
+    archive.move_and_delete_base_directory is defined
+    and extract_command_status is changed
 
 - name: "{{ archive.filename }}: Set owner for extracted files"  # noqa: name[template]
   when: not is_tar or archive.contents_owner is defined
