--- a/tasks/expand_archive_windows.yml
+++ b/tasks/expand_archive_windows.yml
@@ -1,4 +1,16 @@
 ---
+- name: Extract repo and path from path
+  ansible.builtin.set_fact:
+    regex_path: "{{ archive.artefact_path | ansible.builtin.regex_search('^([^/]+)\/?(.*)$', '\\1', '\\2') }}"
+
+- name: Map Repo
+  ansible.builtin.set_fact:
+    repo: "{{ regex_path[0] }}"
+
+- name: Map filepath
+  ansible.builtin.set_fact:
+    filepath: "{{ regex_path[1] }}/{{ archive.filename }}"
+
 - name: "{{ archive.filename }}: Check if destination directory is present" # noqa: name[template]
   ansible.windows.win_stat:
     path: "{{ archive.base_destination_directory }}"
@@ -18,16 +30,6 @@
   register: destination_directory_subdirs
   when: destination_directory.stat.exists
 
-- name: Create Required directories
-  ansible.windows.win_file:
-    path: "{{ item }}"
-    state: directory
-  loop:
-    # - "{{ archive.base_destination_directory }}/{{ archive.move_and_delete_base_directory }}"
-    - "{{ proget_status_directory }}"
-    - "(( proget_downloads_directory ))"
-    - "{{ archive.base_destination_directory }}"
-
 - name: "{{ archive.filename }}: Check sha256 file is present" # noqa: name[template]
   ansible.windows.win_stat:
     path: "{{ proget_status_directory }}/{{ archive.filename }}.sha256"
@@ -41,7 +43,7 @@
 
 - name: "{{ archive.filename }}: Perform a HEAD on the remote file to read sha256" # noqa: name[template]
   ansible.windows.win_uri:
-    url: "{{ proget_api_url }}/{{ archive.repo_name }}/metadata/{{ archive.file_path }}"
+    url: "{{ proget_api_url }}/{{ repo }}/metadata/{{ archive.file_path }}"
     method: GET
     timeout: 60
     return_content: true
@@ -61,7 +63,7 @@
   when: downloaded_file.stat.exists and remote_archive_head.json.size != downloaded_file.stat.size
 
 - name: "{{ archive.filename }}: Download file if sha256 changed or destination directory is new" # noqa: name[template]
-  ansible.windows.win_shell: pgutil assets download --feed={{ archive.repo_name }} --path={{ archive.file_path }} --output={{ proget_downloads_directory }}/{{ archive.filename }}
+  ansible.windows.win_shell: pgutil assets download --feed={{ repo }} --path={{ archive.file_path }} --output={{ proget_downloads_directory }}/{{ archive.filename }}
   environment:
   when: >
     not downloaded_sha256_file.stat.exists
