--- a/tasks/expand_archive_posix.yml
+++ b/tasks/expand_archive_posix.yml
@@ -74,7 +74,7 @@
 - name: "{{ archive.filename }}: Download file if sha256 changed or destination directory is new" # noqa: no-changed-when name[template]
   ansible.builtin.command: pgutil assets download --feed={{ repo }} --path={{ filepath  }} --output={{ proget_downloads_directory }}/{{ archive.filename }}
   environment:
-    PATH: "/opt/homebrew/bin:{{ ansible_env.PATH }}"
+    PATH: "/usr/local/bin:{{ ansible_env.PATH }}"
   when: >
     not downloaded_sha256_file.stat.exists
     or remote_archive_head.json.sha256 not in downloaded_sha256_file_sha256.content | b64decode
