add when for owner NO_JIRA

--- a/tasks/expand_archive_posix.yml
+++ b/tasks/expand_archive_posix.yml
@@ -143,6 +143,7 @@
     dest: "{{ archive.base_destination_directory }}"
     recurse: true
   become: true
+  when: not download_only
 
 - name: "{{ archive.filename }}: Ensure correct owner on destination directory" # noqa: name[template]
   ansible.builtin.file:
