--- a/vars/Windows.yml
+++ b/vars/Windows.yml
@@ -1,4 +1,4 @@
-platform_specific_default_base_proget_archive_directory: D:/artifactory-archives
+platform_specific_default_base_proget_archive_directory: D:/proget-archives
 required_packages:
   - 7zip.install
   - 7zip.portable
