--- a/tasks/expand_archive_windows.yml
+++ b/tasks/expand_archive_windows.yml
@@ -43,7 +43,7 @@
 
 - name: "{{ archive.filename }}: Perform a HEAD on the remote file to read sha256"  # noqa: name[template]
   ansible.windows.win_uri:
-    url: "{{ proget_api_url }}/{{ repo }}/metadata/{{ filepath }}"
+    url: "{{ proget_api_url }}/{{ repo }}/metadata/{{ filepath | regex_replace('^/') }}"
     method: GET
     timeout: 60
     return_content: true
@@ -63,8 +63,7 @@
   when: downloaded_file.stat.exists and remote_archive_head.json.size != downloaded_file.stat.size
 
 - name: "{{ archive.filename }}: Download file if sha256 changed or destination directory is new"  # noqa: name[template]
-  ansible.windows.win_shell: pgutil assets download --feed={{ repo }} --path={{ filepath }} --output={{ proget_downloads_directory }}/{{ archive.filename }}
-  environment:
+  ansible.windows.win_shell: pgutil assets download --feed={{ repo }} --path={{ filepath | regex_replace('^/') }} --output={{ proget_downloads_directory }}/{{ archive.filename }}
   when: >
     not downloaded_sha256_file.stat.exists
     or remote_archive_head.json.sha256 not in downloaded_sha256_file_sha256.content | b64decode
