NO_JIRA add quotes and force: yes

--- a/tasks/Darwin.yml
+++ b/tasks/Darwin.yml
@@ -29,15 +29,17 @@
     - name: Download PGutil {{ pgutil_version }}
       ansible.builtin.get_url:
         url: "{{ pgutil }}"
-        dest: /tmp/pgutil-osx-arm64.zip
+        dest: "/tmp/pgutil-osx-arm64.zip"
         mode: "0640"
+        force: yes
 
     - name: Extract pgutil
       ansible.builtin.unarchive:
-        src: /tmp/pgutil-osx-arm64.zip
+        src: "/tmp/pgutil-osx-arm64.zip"
         dest: "{{ pg_dest }}"
         remote_src: true
         mode: "0755"
+        force: yes
       become: true
 
 - name: Add PGutil source
